--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.0.2",
     "bson": "^6.10.3",
     "class-variance-authority": "^0.7.0",
@@ -30,6 +31,7 @@
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.9.3",
     "react-wrap-balancer": "^1.1.0",
+    "recharts": "^3.5.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
