--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,14 @@
 {
   "builds": [
+    { "src": "server/api/index.js", "use": "@vercel/node" },
     {
-      "src": "client/package.json",
+      "src": "client/**/*",
       "use": "@vercel/static-build",
-      "config": { "distDir": "client/build" }
-    },
-    {
-      "src": "server/api/index.js",
-      "use": "@vercel/node"
+      "config": { "distDir": "client/dist" }
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "server/api/index.js" },
-    { "src": "/(.*)", "dest": "client/build/$1" }
+    { "src": "/api/(.*)", "dest": "/server/api/index.js" },
+    { "src": "/(.*)", "dest": "/client/dist/$1" }
   ]
 }
